test/src/e2e_vm_tests/test_programs/should_pass/language/calling_context_internal_in_contract/src/main.sw
contract;

#[context(internal_only)]
fn bar() {}

abi TestContract {
    fn foo();
}

impl TestContract for Contract {
    #[context(internal_only)]
    fn foo() {
      bar()
    }
}
