test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/trace_attr.sw
library;

struct S { }

impl S {
    #[trace(always)]
    fn ok() {
        panic "Panics for tracing purposes.";
    }

    #[trace(never)]
    #[trace(always)]
    #[trace(always), trace(never)]
    fn not_ok() {
        panic "Panics for tracing purposes.";
    }
}